# structural-reflection

./: Cargo.toml  README.md
derive/: Cargo.toml  README.md
derive/src/: common.rs  has_structure.rs  has_type_name.rs  lib.rs
derive/tests/: has_structure.rs
src/: c_tuple.rs  derive.rs  has_structure.rs  index.rs  intrinsic.rs  lib.rs  primitive.rs  registry.rs  size_align.rs  structure.rs  subtype.rs  type_name.rs
src/misc/: mod.rs  try_index.rs
