[package]
name = "structural-reflection"
version = "0.1.0"
authors = ["jakobeha <jakobeha@fastmail.com>"]
description = "reflection crate for type names and structures, with structural subtyping"
repository = "https://github.com/jakobeha/structural-reflection"
license = "Apache-2.0"
keywords = ["reflect"]
categories = []
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = ["registry"]
registry = ["bimap", "lazy_static", "log"]
derive = ["structural-reflection-derive"]

[dependencies]
# Ours
structural-reflection-derive = { path = "./derive", optional = true }
# Parse
logos = "0.12.1"
snailquote = "0.3.1"
# Derive (Rust patterns)
derivative = "2.2.0"
derive_more = "0.99.17"
join-lazy-fmt = "0.9.2"
# Rust patterns
bimap = { version = "0.6.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }
auto_enums = "0.7.12"
# Logging
log = { version = "0.4.17", optional = true }

[dev-dependencies]
# Logging
test-log = "0.2.11"
env_logger = "0.9.0"
