[package]
name = "structural-reflection-derive"
version = "0.1.0"
authors = ["jakobeha <jakobeha@fastmail.com>"]
description = "proc macros to derive traits for structural reflection"
repository = "https://github.com/jakobeha/structural-reflection"
license = "Apache-2.0"
keywords = ["reflect", "proc-macro"]
categories = []
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.98"
quote = "1.0.20"
proc-macro2 = "1.0.42"

[dev-dependencies]
structural-reflection = { path = ".." }
# Logging
test-log = "0.2.11"
env_logger = "0.9.0"